add snipcart and product grid

--- a/gatsby/src/styles/src/_variables.scss
+++ b/gatsby/src/styles/src/_variables.scss
@@ -9,7 +9,7 @@
 //=====================================================
 
 // Grayscale first design palette
-$color-primary: #424242;
+$color-primary: cornflowerblue;
 $color-secondary: #757575;
 $color-tertiary: #9e9e9e;
 $color-quarternary: #e0e0e0;
