add google fonts

--- a/gatsby/src/styles/src/_variables.scss
+++ b/gatsby/src/styles/src/_variables.scss
@@ -74,16 +74,16 @@ $base-font-size: 62.5%;
 $base-line-height: 1.6;
 
 // Global
-$font-family-primary: "Roboto", "Arial", sans-serif;
+$font-family-primary: "Raleway", "Arial", sans-serif;
 $font-color-primary: $color-grey-dark;
 $font-color-secondary: $color-grey-light;
 $font-size-primary: 1.6rem;
 
 // Headings
-$heading-font-family-primary: "Roboto", "Arial", sans-serif; 
+$heading-font-family-primary: "Raleway", "Arial", sans-serif; 
 $heading-font-color-primary: $color-grey-dark;
 $heading-font-color-secondary: $color-grey-light;
-$heading-font-weight: 600;
+$heading-font-weight: 300;
 $heading-line-height: 1.2;
 
 // Small headings
