--- a/gatsby/src/styles/src/_custom.scss
+++ b/gatsby/src/styles/src/_custom.scss
@@ -3,3 +3,24 @@
 * THEME SPECIFIC COMPONENTS
 *
 */
+
+.category__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4rem;
+    margin-bottom: 3.5rem;
+
+    a {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-gap: 0 1rem;
+        align-items: center;
+        padding: .5rem;
+        background-color: $color-white;
+        border-radius: .5rem;
+
+        .count {
+            color: $color-primary;
+        }
+    }
+}
