--- a/gatsby/src/styles/src/_navigation.scss
+++ b/gatsby/src/styles/src/_navigation.scss
@@ -134,7 +134,7 @@
   visibility: hidden;
   left: 0;
   right: 0;
-  z-index: 999;
+  // z-index: 999;
 }
 
 .navbar-basic.opened .navbar-basic__menu {
