add all products filter and current page styles

--- a/gatsby/src/styles/src/_custom.scss
+++ b/gatsby/src/styles/src/_custom.scss
@@ -22,5 +22,16 @@
         .count {
             color: $color-primary;
         }
+
+        &[aria-current='page'] {
+            background-color: plum;
+        }
+
     }
+    
+    // .active {
+    //     background-color: plum;
+    // }
+
+    
 }
