--- a/gatsby/src/styles/src/_custom.scss
+++ b/gatsby/src/styles/src/_custom.scss
@@ -37,6 +37,21 @@
 }
 
 .blogpost {
-    border: 1px solid blue;
+    // border: 1px solid blue;
     padding: 1rem;
+
+    opacity: 0;
+    transform: translate(0, -20px);
+    animation: fade-in 1s ease forwards;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+        transform: translate(0, 20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
 }
